<resources>
    <string name="app_name">GenshinImpactKotlin</string>
    <string name="search">Buscar</string>
    <string name="avatar">Avatar</string>
    <string name="personajes">Personajes</string>
    <string name="opciones">Opciones</string>
    <string name="principal">Principal</string>
    <string name="example">Prueba</string>
    <string name="attribute">Atributo</string>
    <string name="weapon">Arma</string>
    <string name="element">Elemento</string>
    <string name="charge_attack">Ataque cargado</string>
    <string name="plunge_attack">Ataque descendente</string>
    <string name="normal_attack">Ataque normal</string>
    <string name="region">Región</string>
    <string name="talents">Talentos</string>
    <string name="description">Descripción</string>
    <string name="map">Mapa</string>
    <string name="mapAlertDialog">El mapa interactivo está desarrollado por terceros, cualquier acción dentro de este apartado será bajo su propia responsabilidad.</string>
    <string name="accept">Aceptar</string>
    <string name="weapons">Armas</string>
    <string name="messages_header">Mensajes</string>
    <string name="weapontype">Tipo</string>
    <string name="rarity">Rareza</string>
    <string name="baseatk">Ataque Base</string>
    <string name="substat">Atributo Secundario</string>
    <string name="effectname">Efecto</string>
    <string name="artifacts">Artefactos</string>
    <string name="twopc">Efecto 2 Piezas</string>
    <string name="fourpc">Efecto 4 Piezas</string>
    <string name="onepc">Efecto 1 Pieza</string>
    <string name="languageSettingsCategory">Idioma</string>
    <string name="languageAppNav">Idioma de la aplicación</string>
    <string name="languageAppContent">Idioma del contenido</string>
    <string name="languageAppNavSummary">Cambia el idioma de la navegación de la aplicación</string>
    <string name="languageAppContentSummary">Cambia el idioma del contenido de la aplicación, personajes, artefactos…</string>
    <string name="theme">Tema</string>
    <string name="themeDarkmode">Modo oscuro</string>
    <string name="restartApp">Para cargar los cambios se necesita reiniciar la App</string>
    <string name="externalContent">Contenido externo</string>
    <string name="externalContentSummary">Conexiones a terceros</string>
    <string name="cancel">Cancelar</string>
    <string name="cancelled">Se ha cancelado el acceso al mapa</string>

</resources>