<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <PreferenceCategory app:title="@string/languageSettingsCategory"
        app:icon="@drawable/ic_baseline_language_24">

<!--        <ListPreference-->
<!--            app:defaultValue="en"-->
<!--            app:entries="@array/languageAppNav_entries"-->
<!--            app:entryValues="@array/languageAppNav_values"-->
<!--            app:key="languageAppNav"-->
<!--            app:title="@string/languageAppNav"-->
<!--            app:useSimpleSummaryProvider="true"-->
<!--            android:summary="@string/languageAppNavSummary"-->

<!--            />-->
        <ListPreference
            app:defaultValue="Spanish"
            app:entries="@array/languageAppContent_entries"
            app:entryValues="@array/languageAppContent_values"
            app:key="languageAppContent"
            app:title="@string/languageAppContent"
            app:useSimpleSummaryProvider="true"
            android:summary="@string/languageAppContentSummary"
            />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/theme"
        app:icon="@drawable/ic_baseline_dark_mode_24">

        <SwitchPreferenceCompat
            app:key="theme"
            app:title="@string/themeDarkmode"
            />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/externalContent"
        app:icon="@drawable/ic_baseline_cast_connected_24"
        android:summary="@string/externalContentSummary">

        <SwitchPreferenceCompat
            app:key="map"
            app:title="@string/map"
            app:defaultValue="false"/>

    </PreferenceCategory>
</PreferenceScreen>