<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item
        android:id="@+id/ic_artifacts"
        android:icon="@drawable/ic_nav_artifacts_24"
        android:title="@string/artifacts"/>
    <item
        android:id="@+id/ic_weapons"
        android:icon="@drawable/ic_nav_weapons"
        android:title="@string/weapons"/>
    <item
        android:id="@+id/ic_characters"
        android:icon="@drawable/mage"
        android:title="@string/personajes"/>
    <item
        android:id="@+id/ic_map"
        android:icon="@drawable/ic_nav_map_24dp"
        android:title="@string/map"/>
    <item
        android:id="@+id/ic_settings"
        android:icon="@drawable/ic_nav_settings_24"
        android:title="@string/opciones"/>

</menu>